syntax = "proto3";
package ec_auth;

message RegisterRequest {
    string user = 1;
    bytes y1 = 2;
    bytes y2 = 3;
}

message RegisterResponse {}

message ChallengeRequest {
    string user = 1;
    bytes r1 = 2;
    bytes r2 = 3;
}

message ChallengeResponse {
    string auth_id = 1;
    bytes c = 2;
}

message AnswerRequest {
    string auth_id = 1;
    bytes s = 2;
}

message AnswerResponse {
    string session_id = 1;
}

service Authentication {
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {}
    rpc CreateChallenge(ChallengeRequest) returns (ChallengeResponse) {}
    rpc Verify(AnswerRequest) returns (AnswerResponse) {}
}